Add plugin API v2 and Mixin runtime