@@ -19,6 +19,7 @@ package org.jackhuang.hmcl.plugin.loader;
 
 import org.jackhuang.hmcl.plugin.Plugin;
 import org.jackhuang.hmcl.plugin.PluginManifest;
+import org.jetbrains.annotations.NotNullByDefault;
 
 import java.io.IOException;
 import java.net.URL;
@@ -27,52 +28,56 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Locale;
+import java.util.stream.Stream;
 
-/**
- * Loader for Java and Kotlin plugins.
- */
-public class JavaPluginLoader implements PluginLoader {
+/// Loads Java and Kotlin lifecycle entry points from extracted plugin packages.
+@NotNullByDefault
+public final class JavaPluginLoader implements PluginLoader {
+    /// Creates a JVM plugin loader.
+    public JavaPluginLoader() {
+    }
 
+    /// Loads and instantiates the manifest entry point with access to HMCL and startup Mixin classes.
+    ///
+    /// @param manifest validated plugin manifest
+    /// @param extractedDir extracted package directory
+    /// @param nplFile installed package path
+    /// @return instantiated lifecycle implementation
+    /// @throws IOException if class path discovery or instantiation fails
     @Override
     public Plugin load(PluginManifest manifest, Path extractedDir, Path nplFile) throws IOException {
-        // Find all .jar files in the plugin directory
         List<URL> urls = new ArrayList<>();
-
-        // Add root directory (for classes directory)
         urls.add(extractedDir.toUri().toURL());
 
-        // Add all .jar files
-        if (Files.exists(extractedDir)) {
-            urls.addAll(Files.walk(extractedDir)
-                    .filter(path -> path.toString().endsWith(".jar"))
-                    .map(path -> {
-                        try {
-                            return path.toUri().toURL();
-                        } catch (Exception e) {
-                            throw new RuntimeException(e);
-                        }
-                    })
-                    .collect(Collectors.toList()));
+        if (Files.isDirectory(extractedDir)) {
+            try (Stream<Path> files = Files.walk(extractedDir)) {
+                for (Path jar : files
+                        .filter(Files::isRegularFile)
+                        .filter(path -> path.getFileName().toString().toLowerCase(Locale.ROOT).endsWith(".jar"))
+                        .sorted()
+                        .toList()) {
+                    urls.add(jar.toUri().toURL());
+                }
+            }
         }
 
-        // Create class loader with access to HMCL classes
         URLClassLoader classLoader = new URLClassLoader(
-                urls.toArray(new URL[0]),
+                urls.toArray(URL[]::new),
                 JavaPluginLoader.class.getClassLoader()
         );
-
-        // Load the plugin class
         try {
             Class<?> pluginClass = classLoader.loadClass(manifest.getEntrypoint());
-
             if (!Plugin.class.isAssignableFrom(pluginClass)) {
-                throw new IOException("Plugin class must implement Plugin interface: " + manifest.getEntrypoint());
+                throw new IOException("Plugin class must implement Plugin: " + manifest.getEntrypoint());
             }
-
             return (Plugin) pluginClass.getDeclaredConstructor().newInstance();
-        } catch (ReflectiveOperationException e) {
-            throw new IOException("Failed to instantiate plugin: " + manifest.getEntrypoint(), e);
+        } catch (ReflectiveOperationException | LinkageError exception) {
+            classLoader.close();
+            throw new IOException("Failed to instantiate plugin: " + manifest.getEntrypoint(), exception);
+        } catch (IOException exception) {
+            classLoader.close();
+            throw exception;
         }
     }
 }
